# open-atelier

./: .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  run-desktop.sh  update-linux-app.sh  update-macos-app.sh  vite.config.ts
.github/: README.md
.github/workflows/: ci.yml  release.yml
docs/: README.md
docs/architecture/: ARCHITECTURE.md  README.md  backend.md  database.md  frontend.md  infrastructure.md  overview.md
docs/dev/: DEVELOPER_GUIDE.md
docs/development/: deployment.md  setup.md  testing.md
docs/module/: MODULES.md
docs/reference/: 2026-07-improvement-pass.md  api-reference.md  (+1 more)
release-dist/: Open-Atelier-0.1.1-darwin-aarch64.tar.gz.sig
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/config/: llm-permissions.json
src-tauri/resources/default-skills/: brainstorm-facilitator.md  code-reviewer.md  data-analyst.md  email-drafting.md  github-code-reviewer.md  meeting-notes.md  presentation-builder.md  read-aloud-narrator.md  research-report.md  resume-cv-writer.md  spreadsheet-analyst.md  translator.md
src-tauri/resources/skills/: llm-functions-v1.md
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: chat.rs  connectors.rs  conversation_groups.rs  cred_store.rs  files.rs  mod.rs  plan.rs  profile.rs  settings.rs  window.rs  workspace.rs
src-tauri/src/connectors/: github.rs  github_oauth.rs  google_drive.rs  google_oauth.rs  mod.rs  notion.rs  slack.rs
src-tauri/src/db/: mod.rs  schema.rs
src-tauri/src/indexer/: embedder.rs  mod.rs
src-tauri/src/llm/: anthropic.rs  google.rs  mod.rs  ollama.rs  openai.rs  openai_compatible.rs  permissions.rs  router.rs  skills.rs  sse.rs
src-tauri/src/models/: mod.rs
src-tauri/src/triggers/: executor.rs  formatter.rs  mod.rs  office.rs  parser.rs  pdf.rs  snapshot.rs  tts.rs
(+51 files in other folders)
