[package]
name = "open-atelier"
version = "0.1.0"
edition = "2021"

[lib]
name = "open_atelier_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
blake3 = "1"
notify = "6"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
once_cell = "1"
log = "0.4"
dirs = "5"
open = "5"
tauri-plugin-log = "2.8.0"
rust_xlsxwriter = "0.96.0"
docx-rs = "0.4.20"
zip = "8.6.0"
calamine = "0.35.0"
quick-xml = "0.41.0"
printpdf = "0.9.1"
mp3lame-encoder = "0.2.4"
# Both already pulled in transitively (reqwest's TLS stack, rusqlite's
# bundling, etc.) — used directly here for PKCE code_challenge generation
# (Google Drive's native OAuth "installed app" flow).
sha2 = "0.10"
base64 = "0.22"
url = "2"
# Used ONLY for an explicit, user-triggered check of pre-existing CLI OAuth
# sessions in the macOS Keychain — never called automatically. Atelier's own
# credential storage (src-tauri/src/commands/cred_store.rs) never uses this
# crate and never touches the OS keychain for anything it writes.
[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "2", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
